fix spacing on general info

--- a/public/css/landing-page.css
+++ b/public/css/landing-page.css
@@ -12,8 +12,8 @@
 }
 
 .info {
-	padding-top: 5rem;
-	padding-bottom: 5rem;
+	padding-top: 4rem;
+	padding-bottom: 4rem;
 	background-color: #eee;
 }
 
